temp/objects/Hero__c.object
<CustomObject>
    <fields>
        <fullName>Game_Version__c</fullName>
        <label>Game Version</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pokemon_Game_Versions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <default>true</default>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Game_Version__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Kanto</fullName>
                </value>
                <value>
                    <fullName>Johto</fullName>
                </value>
                <value>
                    <fullName>Hoenn</fullName>
                </value>
                <value>
                    <fullName>Sinnoh</fullName>
                </value>
                <value>
                    <fullName>Unova</fullName>
                </value>
                <value>
                    <fullName>Kalos</fullName>
                </value>
                <value>
                    <fullName>Alola</fullName>
                </value>
                <value>
                    <fullName>Galar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rival_Name__c</fullName>
        <label>Rival Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Hero</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Gender__c</columns>
        <columns>Region__c</columns>
        <columns>Game_Version__c</columns>
        <columns>Rival_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Heroes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>